changed ml2 service to new design of rest_module

--- a/ml2/Untitled.ipynb
+++ b/ml2/Untitled.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "skilled-luxury",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, '../transport/')\n",
-    "sys.path.insert(0, '../transport/messages_types_python/')"
+    "\n",
+    "# it's necessary to add to path dir of rest_module\n",
+    "sys.path.insert(0, '../connector')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "proper-panel",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -74,12 +73,9 @@
     }
    ],
    "source": [
-    "# from rest_module import TransportClient\n",
     "from rest_module import ConnectorClient\n",
-    "import os\n",
-    "from time import sleep\n",
     "\n",
-    "cc = ConnectorClient(use_sandbox=True, service_name='service2')\n",
+    "cc = ConnectorClient(use_sandbox=True, service_name='ml2')\n",
     "res = cc.get_market_candles('BBG0013HGFT4', '2020-12-25T10:10:00.131642+03:00', '2020-12-25T10:15:00.131642+03:00', '1min')\n",
     "print(res)"
    ]
